Added Favicon [AF]

--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,13 @@
 <html>
 <head> 
+
+<!-- TITLE -->
 <title>K-54TH15H</title>
+
+<!-- FAVICON-->
+<link rel = "icon" type = "image/png" href = "imgs/favicon.png">
+
 </head>
 <body>
----THIS IS A WEB-PAGE UNDER CONSTRUCTION---
 </body>
 </html>
