--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,9 @@
 <!-- FAVICON-->
 <link rel = "icon" type = "image/png" href = "imgs/favicon.png">
 
+<!-- CASCADING STYLE SHEET -->
+<link rel = "stylesheet" href = "styles.css">
+
 </head>
 <body>
 </body>
