--- a/src/index.html
+++ b/src/index.html
@@ -12,5 +12,14 @@
 
 </head>
 <body>
+
+<!-- NAVBAR -->
+<nav>
+	<a href="index.html">Home</a>
+	<a href="about.html">About</a>
+	<a href="works.html">Works</a>
+	<a href="Contact.html">Contact</a>
+</nav>
+<!-- END OF NAVBAR -->
 </body>
 </html>
